1.02:
  - JPG plugin: added support for quality image scaling.  
  - If the filename does not have an extension or the extension is unknown,
    it will check file data to determine a suitable plugin (closed
    ticket #43).
  - Updated NLS-files: German, ...

1.01:
  - DJVU plugin: plugin may eat great amount of memory, fixed.
  - DJVU plugin: djvulibre updated to version 3.5.19.
  - DJVU plugin: fix opening files with non-latin chars in filename.
  - PDF plugin: freetype library updated to version 2.3.5.
  - TAB key switch between navigation pane and document (closed
    tickets #112, #123).
  - Zoom in/Zoom out menuitems and corresponding Ctrl++/Ctrl+- hotkeys.
  - Ctrl+Shift++/Ctrl+Shift+- hotkeys for rotate CW/CCW, Ctrl+P for Print
    (closed ticket #108).
  - Opening external files from links in document.
  - Updated NLS-files: Czech, French, Dutch.

1.0:
  - Show message with missed modulename if Lucide.dll cannot be loaded.
  - PDF plugin: freetype library updated to release 2.3.1.
  - Minor fixes.
  - Updated NLS-files: German, French, Swedish, Danish.

1.0 RC1:
  - Ask for password, if document password-protected.
  - Pipe commands, see readme for details.
  - 'New window' menuitem.
  - Writes into EA thumbnail of first page of document (for eSchemes Deluxe).
  - Added 'print to file' option for postscript output.
  - Remember last selected printer during session (closed ticket #96).
  - Copy unicode text to clipboard in OpenOffice.org compatible format.
  - Optimized unicode conversion, fixed crash in uconv.dll (closed ticket #97).
  - Speedup for 'As Image' printing, fixed crash (closed ticket #94).
  - Odd/Even printing for 'As Image' printing.
  - Plugin API extension: extended error reporting.
  - PDF plugin: freetype library updated to release 2.3.0 (closed ticket #76).
  - DJVU plugin: handle document load errors.
  - Added NLS-files: Italian, Czech, Russian.
  - Updated NLS-files: Spanish, German, French.

Beta-4: